♻️  position: sticky; & position: fixed; + z-index setting

--- a/styles/components/_drawer-menu.scss
+++ b/styles/components/_drawer-menu.scss
@@ -1,183 +1,188 @@
-.drawer-menu {
-  $draw-menu-item-height: 45px;
-  $grade-length: 2;
-  $class-length: 2;
-  $sms-length: 2;
-  $board-length: 2;
-  $boss-length: 4;
+.drawer-menu-all {
+  margin-bottom: 20px;
+  border-radius: 4px;
 
-  @function _calculate-max-content-height($length) {
-    @return $draw-menu-item-height * $length;
-  }
+  .drawer-menu {
+    $draw-menu-item-height: 45px;
+    $grade-length: 2;
+    $class-length: 2;
+    $sms-length: 2;
+    $board-length: 2;
+    $boss-length: 4;
 
-  &.is-active {
-    background-color: $active;
-    border-radius: 4px;
-
-    .drawer-menu-button {
-      font-weight: 500;
-      color: $black;
+    @function _calculate-max-content-height($length) {
+      @return $draw-menu-item-height * $length;
     }
 
-    .drawer-menu-item {
-      background-color: $active;
-    }
-  }
-
-  &.is-open {
-    &.is-grade {
-      .drawer-menu-content {
-        max-height: _calculate-max-content-height($grade-length);
-      }
-    }
-
-    &.is-class {
-      .drawer-menu-content {
-        max-height: _calculate-max-content-height($class-length);
-      }
-    }
-
-    &.is-sms {
-      .drawer-menu-content {
-        max-height: _calculate-max-content-height($sms-length);
-      }
-    }
-
-    &.is-board {
-      .drawer-menu-content {
-        max-height: _calculate-max-content-height($board-length);
-      }
-    }
-
-    &.is-boss {
-      .drawer-menu-content {
-        max-height: _calculate-max-content-height($boss-length);
-      }
-    }
-
-    .drawer-menu-button span:last-child {
-      transform: translateY(-50%) rotate(90deg);
-    }
-  }
-
-  &-category {
-    @include text-style(16, $text);
-    display: block;
-    padding: 5px 16px;
-    margin-top: 15px;
-    font-weight: 700;
-  }
-
-  &-button,
-  &-link {
-    @include flexbox(start);
-    @include text-style(18, $text);
-    position: relative;
-    width: 100%;
-    height: 50px;
-    padding: 16px;
-    transition: all 200ms ease-in-out;
-
-    &:hover {
-      font-weight: 500;
-      color: $black;
-    }
-
-    i:first-child {
-      width: 38px;
-      padding-right: 20px;
-      font-size: 15px;
-    }
-
-    span:last-child {
-      @include pos-center-y;
-      right: 16px;
-      font-size: 18px;
-      transition: all 200ms ease-in-out;
-    }
-
-    .fa-chart-line {
-      color: $blue;
-    }
-
-    .fa-user-friends {
-      color: $yellow;
-    }
-
-    .fa-stopwatch {
-      color: $red;
-    }
-
-    .fa-file-invoice-dollar {
-      color: $default;
-    }
-
-    .fa-edit {
-      color: $blue;
-    }
-
-    .fa-comment-dots {
-      color: $primary;
-    }
-
-    .fa-file-alt {
-      color: $yellow;
-    }
-
-    .fa-business-time {
-      color: $orange;
-    }
-
-    .fa-chalkboard {
-      color: $g-dark;
-    }
-
-    .fa-sms {
-      color: $p-dark;
-    }
-
-    .fa-clipboard {
-      color: $text;
-    }
-
-    .fa-sitemap {
-      color: $black;
-    }
-  }
-
-  &-content {
-    max-height: 0;
-    overflow: hidden;
-    transition: all 200ms ease-in-out;
-  }
-
-  &-list {
-    li:last-child {
-      margin-bottom: 10px;
-    }
-  }
-
-  &-item {
     &.is-active {
-      a {
+      background-color: $active;
+      border-radius: 4px;
+
+      .drawer-menu-button {
         font-weight: 500;
         color: $black;
-        background-color: $select;
+      }
+
+      .drawer-menu-item {
+        background-color: $active;
       }
     }
 
-    a {
-      @include flexbox(start);
+    &.is-open {
+      &.is-grade {
+        .drawer-menu-content {
+          max-height: _calculate-max-content-height($grade-length);
+        }
+      }
+
+      &.is-class {
+        .drawer-menu-content {
+          max-height: _calculate-max-content-height($class-length);
+        }
+      }
+
+      &.is-sms {
+        .drawer-menu-content {
+          max-height: _calculate-max-content-height($sms-length);
+        }
+      }
+
+      &.is-board {
+        .drawer-menu-content {
+          max-height: _calculate-max-content-height($board-length);
+        }
+      }
+
+      &.is-boss {
+        .drawer-menu-content {
+          max-height: _calculate-max-content-height($boss-length);
+        }
+      }
+
+      .drawer-menu-button span:last-child {
+        transform: translateY(-50%) rotate(90deg);
+      }
+    }
+
+    &-category {
       @include text-style(16, $text);
+      display: block;
+      padding: 5px 16px;
+      margin-top: 15px;
+      font-weight: 700;
+    }
+
+    &-button,
+    &-link {
+      @include flexbox(start);
+      @include text-style(18, $text);
+      position: relative;
       width: 100%;
-      height: $draw-menu-item-height;
-      padding-left: 55px;
-      border-radius: 4px;
+      height: 50px;
+      padding: 16px;
       transition: all 200ms ease-in-out;
 
       &:hover {
         font-weight: 500;
         color: $black;
+      }
+
+      i:first-child {
+        width: 38px;
+        padding-right: 20px;
+        font-size: 15px;
+      }
+
+      span:last-child {
+        @include pos-center-y;
+        right: 16px;
+        font-size: 18px;
+        transition: all 200ms ease-in-out;
+      }
+
+      .fa-chart-line {
+        color: $blue;
+      }
+
+      .fa-user-friends {
+        color: $yellow;
+      }
+
+      .fa-stopwatch {
+        color: $red;
+      }
+
+      .fa-file-invoice-dollar {
+        color: $default;
+      }
+
+      .fa-edit {
+        color: $blue;
+      }
+
+      .fa-comment-dots {
+        color: $primary;
+      }
+
+      .fa-file-alt {
+        color: $yellow;
+      }
+
+      .fa-business-time {
+        color: $orange;
+      }
+
+      .fa-chalkboard {
+        color: $g-dark;
+      }
+
+      .fa-sms {
+        color: $p-dark;
+      }
+
+      .fa-clipboard {
+        color: $text;
+      }
+
+      .fa-sitemap {
+        color: $black;
+      }
+    }
+
+    &-content {
+      max-height: 0;
+      overflow: hidden;
+      transition: all 200ms ease-in-out;
+    }
+
+    &-list {
+      li:last-child {
+        margin-bottom: 10px;
+      }
+    }
+
+    &-item {
+      &.is-active {
+        a {
+          font-weight: 500;
+          color: $black;
+          background-color: $select;
+        }
+      }
+
+      a {
+        @include flexbox(start);
+        @include text-style(16, $text);
+        width: 100%;
+        height: $draw-menu-item-height;
+        padding-left: 55px;
+        border-radius: 4px;
+        transition: all 200ms ease-in-out;
+
+        &:hover {
+          font-weight: 500;
+          color: $black;
+        }
       }
     }
   }
