--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -60,8 +60,9 @@
 
   &-content {
     position: absolute;
-    top: 65px;
-    left: -30px;
+    top: calc(100% + 8px);
+    left: -33px;
+    z-index: $my-menu-level;
     opacity: 0;
     visibility: hidden;
     transform: translate3d(-50%, -10px, 0);
