--- a/styles/constants/_z-indexes.scss
+++ b/styles/constants/_z-indexes.scss
@@ -1,3 +1,6 @@
 $overlay-level: 10;
+$my-menu-level: 10;
+$search-history-level: 10;
+$side-gnb-header-level: 10;
 $search-modal-level: 20;
 $side-gnb-level: 30;
